dev-apps/deploy-docs/templates/phpmyadmin/check-pma-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: check-pma-config
  namespace: geek-apps
spec:
  containers:
    - name: show-env-values
      image: busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
