dev-apps/deploy-docs/templates/phpmyadmin/pma-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synology-phpmyadmin
  namespace: geek-apps
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: synology-phpmyadmin
        image: phpmyadmin
        imagePullPolicy: IfNotPresent    
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: "/var/www/html/config.inc.php"
          subPath: config.inc.php
          name: pma-config-inc-vol
          readOnly: true
      volumes:
      - name: pma-config-inc-vol
        configMap:
          name: pma-config-inc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pma-service
  namespace: geek-apps
  labels:
    app: phpmyadmin
spec:
  clusterIP: None
  ports:
  - targetPort: 80
    port: 80
    name: httpport
  selector:
    app: phpmyadmin

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: geek-apps
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - pma.zizhizhan.com
    secretName: star.zizhizhan.com-tls
  rules:
  - host: pma.zizhizhan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-pma-service
            port:
              number: 80
